# basic_renderer

./: README.md  imgui.ini  meson.build  print_src_files.bat  todo.md  todos.md
basic_renderer/include/: index_buffer.h  log.h  renderer.h  shader.h  shader_generation.h  texture.h  vertex_array.h  vertex_buffer.h  vertex_buffer_layout.h
basic_renderer/include/tests/: test.h  test_batch_rendering.h  test_clear_color.h  test_pong.h  test_textures_2d.h
basic_renderer/shader/: shader.frag  shader.vert
basic_renderer/shader/test_batch_rendering/: shader.frag  shader.frag.glsl  shader.vert  shader.vert.glsl
basic_renderer/src/: application.cpp  index_buffer.cpp  log.cpp  renderer.cpp  shader.cpp  shader_generation.cpp  texture.cpp  vertex_array.cpp  vertex_buffer.cpp
basic_renderer/src/tests/: test.cpp  test_batch_rendering.cpp  test_clear_color.cpp  test_pong.cpp  test_textures_2d.cpp
